- fixed : + position on mobile

--- a/src/scss/blocks/_element.scss
+++ b/src/scss/blocks/_element.scss
@@ -353,12 +353,12 @@ $responsive-spacing: 15px;
                 margin-top: 0.2em;
             }
             .element__button--plus {
-                width: 100vw;
-                height: 100vw;
-                margin-bottom: -50vw;
-                margin-right: -50vw;
-                font-size: 6.5em;
-                line-height: 4.9em;
+                width: 375px;
+                height: 375px;
+                margin-bottom: -187px;
+                margin-right: -187px;
+                font-size: 100px;
+                line-height: 360px;
             }
         }
 
